Update DMW_Assignment - 7.ipynb

--- a/DMW_Assignment - 7.ipynb
+++ b/DMW_Assignment - 7.ipynb
@@ -19,7 +19,7 @@
    "id": "aa033cb3",
    "metadata": {},
    "source": [
-    "## Assignment No 7 - Implementation of similarity and dissimilarity measures "
+    "## Implementation of similarity and dissimilarity measures "
    ]
   },
   {
